<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >

    <LinearLayout style="@style/Register_Input" >

        <TextView
            style="@style/Smile.TextView._Black"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/Username"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_username"
            style="@style/Register_Edit"
            android:textSize="15dp"
            android:hint="Enter user name" />
    </LinearLayout>

    <LinearLayout style="@style/Register_Input" >

        <TextView
            style="@style/Smile.TextView._Black"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/password"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_password"
            style="@style/Register_Edit"
             android:inputType="textPassword"
             android:textSize="15dp"
            android:hint="Enter password here" />
    </LinearLayout>

    <LinearLayout
        style="@style/Register_Input"
        android:layout_height="45dp" >

        <TextView
            style="@style/Smile.TextView._Black"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/confirm"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/password"
            style="@style/Register_Edit"
             android:inputType="textPassword"
             android:textSize="15dp"
            android:hint="Password again"/>
    </LinearLayout>
<LinearLayout style="@style/Register_Input" >

        <TextView
            style="@style/Smile.TextView._Black"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/Phone"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_phone"
            style="@style/Register_Edit"
            android:textSize="15dp"
            android:hint="Enter phone number" />
    </LinearLayout>
    <LinearLayout style="@style/Register_Input" >

        <TextView
            style="@style/Smile.TextView._Black"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/Email"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/mail"
            style="@style/Register_Edit"
            android:textSize="15dp"
            android:hint="Please enter the email" />
    </LinearLayout>

 <LinearLayout style="@style/Smile" 
     android:orientation="horizontal">
    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/passenger" />
 </LinearLayout>

 <CheckBox
     android:id="@+id/checkBox2"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="@string/driver" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/base_action_bar_height"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:background="@drawable/btn_login_selector"
        android:text="register"
        android:textColor="@color/base_color_text_white"
        android:textSize="@dimen/text_size_large" />
</LinearLayout>
